<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Task List Frag</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menutitle_showDurations">Durations Report</string>
    <string name="menutitle_settings">Settings</string>
    <string name="menutitle_ShowAbout">About Task timer</string>
    <string name="menutitle_generate">Generate Data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="delete_button_description">Button to delete a Tasks</string>
    <string name="edit_button_description">Button to edit a Tasks Details</string>
    <string name="hint_task_name">Task Name: required</string>
    <string name="hint_task_description">Task Description (optional)</string>
    <string name="hint_task_order">Order: Sorts low to high</string>
    <string name="label_save">Save</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_postative_caption">Delete</string>
    <string name="deldiag_message">Delete will also delete timings data for task %1$d: %2$s.</string>
    <string name="cancelEnigDiag_message">You have unsaved changes.  Abandon changes or continue editing</string>
    <string name="cancelEditDiag_positive_caption">Abandon Changes</string>
    <string name="cancelEditDiag_negative_caption">Continue Editing</string>
    <string name="about_copyrite">Copyright \u00a9 2019 Ben Edwards</string>
    <string name="about_weblink_v21">Instructions available at funkytwig.com</string>
    <string name="about_weblink">Instructions available at</string>
    <string name="about_url"><u>"https://www.funkytwig.com"</u></string>
    <string name="about_email">For support email tasktimer@funkytwig.com</string>
    <string name="about_credits">For support email tasktimer@funkytwig.com</string>
    <string name="about_url_error">No browser application found, cannot visit web</string>
    <string name="timing_message">Currently Timing: %1$s</string>
    <string name="td_text_name">Task Name</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="title_activity_durations_report">DurationsReport</string>
    <string name="rm_title_filter_day">Show Day</string>
    <string name="rm_title_filter_week">Show Week</string>
    <string name="rm_title_filter_date">Set Report Date</string>
    <string name="rm_title_delete">Delete old timings</string>
    <string name="date_title_filter">Select Date for Report</string>
</resources>