<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding"
    android:paddingBottom="?attr/dialogPreferredPadding">

    <TextView
        android:id="@+id/aboutVerison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        tools:text="1.0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/aboutCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_copyrite"
        android:textColor="@color/design_default_color_primary" />


    <include
        layout="@layout/about_web_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/aboutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:text="@string/about_email"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/aboutCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_credits"
        android:textColor="@color/design_default_color_primary" />
</LinearLayout>